--- a/vignettes/dasper.Rmd
+++ b/vignettes/dasper.Rmd
@@ -120,7 +120,7 @@ megadepth::install_megadepth()
 
 ```{r, "load ref", warning = FALSE}
 
-# use Genomic state to load txdb (GENCODE v31)
+# use GenomicState to load txdb (GENCODE v31)
 ref <- GenomicState::GenomicStateHub(version = "31", genome = "hg38", filetype = "TxDb")[[1]]
 ```
 
@@ -135,6 +135,7 @@ url <- recount::download_study(
     download = FALSE
 )
 
+# cache the file using BiocFileCache for faster retrieval
 bw_path <- dasper:::.file_cache(url[1])
 ```
 
@@ -156,10 +157,11 @@ outlier_scores <-
     junction_process(junctions_example, ref) %>%
     coverage_process(ref,
         coverage_paths_case = rep(bw_path, 2),
-        coverage_paths_control = rep(bw_path, 2),
-        coverage_chr_control = "chr"
+        coverage_paths_control = rep(bw_path, 3),
+        coverage_chr_control = "chr",
+        bp_param = BiocParallel::MulticoreParam(5)
     ) %>%
-    outlier_process()
+    outlier_process(bp_param = BiocParallel::MulticoreParam(5))
 
 head(outlier_scores)
 ```
@@ -176,13 +178,28 @@ Additionally, you can choose to add a set of control junctions from GTEx to comp
 
 ```{r "junction_load"}
 
-junctions_example_1_path <- system.file("extdata", "junctions_example_1.txt", package = "dasper", mustWork = TRUE)
-junctions_example_2_path <- system.file("extdata", "junctions_example_2.txt", package = "dasper", mustWork = TRUE)
+junctions_example_1_path <-
+    system.file(
+        "extdata",
+        "junctions_example_1.txt",
+        package = "dasper",
+        mustWork = TRUE
+    )
+junctions_example_2_path <-
+    system.file(
+        "extdata",
+        "junctions_example_2.txt",
+        package = "dasper",
+        mustWork = TRUE
+    )
 
 # only use chromosomes 21 + 22 for vignette speed
 junctions <-
     junction_load(
-        junction_paths = c(junctions_example_1_path, junctions_example_2_path),
+        junction_paths = c(
+            junctions_example_1_path,
+            junctions_example_2_path
+        ),
         controls = "fibroblasts",
         chrs = c("chr21", "chr22")
     )
